--- a/mybatis-plus-sample-active-record/src/main/resources/application.yml
+++ b/mybatis-plus-sample-active-record/src/main/resources/application.yml
@@ -1,12 +1,14 @@
+server:
+  port: 8089
+
 # DataSource Config
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    schema: classpath:db/schema-h2.sql
-    data: classpath:db/data-h2.sql
-    url: jdbc:h2:mem:test
+    url: jdbc:mysql://localhost:3306/t1?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: test
+    password: dengyan
+
 
 
 # Logger Config
